[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
config = "0.13.3"
serde = {version = "1.0.149", features = ["derive"]}
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.15"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
tokio = "1.23.0"
actix-rt = "2.7.0"
reqwest = "0.11.13"

