[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
config = "0.13.3"
serde = {version = "1.0.149", features = ["derive"]}
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.10.0"
log = "0.4.17"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-actix-web = "0.6.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"]}
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
tokio = {version = "1.19.2", features = ["rt", "macros"]}
actix-rt = "2.7.0"
once_cell = "1.16.0"
claim = "0.5.0"
fake = "~2.3"
wiremock = "0.5.15"
serde_json = "1"
linkify = "0.9.0"

